package Decorator_pattern;

public interface Clothing {
   String getDescription();
    double getTotalPrice();

}
